# valley

./: .gitignore  CMakeLists.txt  Checklist.txt  Makefile  PerftResults  README.md  perftCompare.sh
include/: bitboard.h  evaluator.h  game.h  moveGeneration.h  moves.h  tt.h  uci.h  utilities.h  xxhash.h
src/: bitboard.cpp  evaluator.cpp  game.cpp  main.cpp  moveGeneration.cpp  moves.cpp  tt.cpp  uci.cpp  utilities.cpp
